<resources>
    <string name="app_name">Eventify</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_calendar">Calendar</string>

    <!-- Preference Titles -->
    <string name="language_settings_title">Languages</string>
    <string name="notification_settings_title">Notifications</string>

    <!-- Language Preferences -->
    <string name="language_title">Your language</string>

    <!-- Notification Preferences -->
    <string name="notification_title">Notification period</string>
    <string name="notification_preference_key" translatable="false">notification</string>
    <string name="notification_preference_default" translatable="false">2</string>
    <string name="notifications_off">Off</string>
    <string name="notifications_hour_before">Hour before</string>
    <string name="notifications_day_before">Day before</string>
    <string name="notifications_week_before">Week before</string>

    <string name="add_event">Add event</string>
    <string name="pick_date">Pick date</string>
    <string name="pick_location">Pick location</string>
    <string name="add_photo">Add photo</string>

    <!-- Add photo options -->
    <string name="bottom_sheet_option_camera">Use Camera</string>
    <string name="bottom_sheet_option_gallery">Upload from Gallery</string>
    <string name="bottom_sheet_option_url">Upload from Internet</string>
    <string name="bottom_sheet_option_heading">Add Photo</string>
    <string name="title_activity_maps">Map</string>
    <string name="language_preference_key" translatable="false">language</string>
    <string name="language_preference_default" translatable="false">en</string>
    <string name="save_location_button_text">Save location</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="activity_added_successfully">Activity added successfully</string>
    <string name="field_is_required">Field is required</string>
    <string name="search_hint">"Search "</string>
    <string name="internet_connection_not_available">Internet connection not available</string>
    <string name="there_are_no_activities">There are no activities.</string>
    <string name="title_activity_details">Activity details</string>
    <string name="category">Category</string>
    <string name="activity_title">Activity Title</string>
    <string name="activity_description">Activity Description</string>
    <string name="activity_date">Activity Date</string>
    <string name="activity_location">Activity Location</string>
    <string name="delete_activity">Delete activity</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="answer_positive">Yes</string>
    <string name="answer_negative">No </string>
</resources>